--- a/app/views/main/index.html.haml
+++ b/app/views/main/index.html.haml
@@ -2,7 +2,7 @@
   .table-row
     .table-cell.sidebar
       %h1
-        = image_tag "logos/adopt-a-hydrant.png", :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
+        = image_tag "logos/adopt-a-garden.png", :alt => t("titles.main", :thing => t("defaults.thing").titleize), :title => t("titles.main", :thing => t("defaults.thing").titleize)
       %p.alert-message.block-message#tagline
         = t("defaults.tagline")
       #content
@@ -13,22 +13,22 @@
           = render :partial => "sidebar/combo_form"
       #logos
         #col1
-          %a{:href => "http://codeforamerica.org/"}
-            = image_tag "logos/cfa.png", :alt => t("sponsors.cfa"), :title => t("sponsors.cfa")
+          %a{:href => "http://civichack.me/"}
+            = image_tag "logos/maine-hacker-club.png", :alt => t("sponsors.cfa"), :title => t("sponsors.cfa")
           %br
-          %a{:href => "http://bostonbuilt.org/"}
-            = image_tag "logos/bostonbuilt.png", :alt => t("sponsors.built"), :title => t("sponsors.built")
+          %a{:href => "http://bangorbuilt.org/"}
+            = image_tag "logos/built-in-bangor.png", :alt => t("sponsors.built"), :title => t("sponsors.built")
         #col2
-          %a{:href => "http://www.cityofboston.gov/"}
-            = image_tag "logos/boston.png", :alt => t("sponsors.city"), :title => t("sponsors.city")
+          %a{:href => "http://www.bangormaine.gov/"}
+            = image_tag "logos/bangor.png", :alt => t("sponsors.city"), :title => t("sponsors.city")
           %p#mayor
-            %a{:href => "http://www.cityofboston.gov/mayor/"}
+            %a{:href => "http://www.bangormaine.gov/mayor/"}
               = "#{t("sponsors.mayor.name")},"
               %em
                 = t("sponsors.mayor.title")
       #feedback
         %p
-          %a{:href => URI.escape("mailto:adoptahydrant@cityofboston.gov?subject=#{t("titles.main", :thing => t("defaults.thing").titleize)} - #{t("links.feedback").titleize}")}
+          %a{:href => URI.escape("mailto:help@adoptagarden.me#{t("titles.main", :thing => t("defaults.thing").titleize)} - #{t("links.feedback").titleize}")}
             = t("links.feedback")
     .table-cell.map-container
       #map
