--- a/app/views/thing_mailer/reminder.text.erb
+++ b/app/views/thing_mailer/reminder.text.erb
@@ -1,7 +1,7 @@
 Hello <%= @user.name.split.first %>,
 
-Did you remember to shovel out the fire hydrant you adopted at <%= @thing.street_address %>? If not, please shovel your hydrant as soon as possible!
+Have you remembered to take are of the garden you adopted at <%= @thing.street_address %>? If not, please consider getting out there and making it look nice!
 
-If you've already shoveled, thank you for serving your city!
+If you've already been out there, thank you for serving your city!
 
-The Adopt-a-Hydrant Team
+The Adopt-a-Garden Team
